--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.8.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +28,7 @@
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "stripe": "^17.2.0",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
@@ -41,7 +44,6 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:3010",
   "browserslist": {
     "production": [
       ">0.2%",
