--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_BASE_URL=https://clothes-backend-alpha.vercel.app
+# REACT_APP_BASE_URL=clothes-backend-drab.vercel.app
 REACT_APP_BASE_URL=http://localhost:3010
